--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.4.0",
     "babel-loader": "^8.2.5",
+    "classnames": "^2.3.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "eslint-config-prettier": "^8.6.0",
@@ -53,7 +54,12 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^20.2.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "^6.1.6",
@@ -73,26 +79,21 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "react-test-renderer": "^18.2.0",
     "regenerator-runtime": "^0.13.11",
+    "rimraf": "^5.0.1",
     "sass": "^1.62.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
+    "typescript": "^5.0.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/node": "^20.2.3",
-    "nodemon": "^2.0.22",
-    "rimraf": "^5.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "webpack-dev-server": "^4.11.1"
   }
 }
